// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should handle TEST_API_FAILURE action 1`] = `
Array [
  Object {
    "type": "TEST_API_REQUEST",
  },
  Object {
    "error": [Error: Look ma! I am an error.],
    "type": "TEST_API_FAILURE",
  },
]
`;

exports[`should handle TEST_API_SUCCESS action 1`] = `
Array [
  Object {
    "type": "TEST_API_REQUEST",
  },
  Object {
    "error": [Error: Authentication error],
    "type": "TEST_API_FAILURE",
  },
]
`;
